--- a/data/pcb-en.yaml
+++ b/data/pcb-en.yaml
@@ -1,6 +1,6 @@
-train: F:\\datasets\\pcb-yolo-en-clean-v2\\train.txt
-val: F:\\datasets\\pcb-yolo-en-clean-v2\\valid.txt
-test: F:\\datasets\\pcb-yolo-en-clean-v2\\test.txt
+train: datasets/pcb-yolo-en-clean-v2/train.txt
+val: datasets/pcb-yolo-en-clean-v2/valid.txt
+test: datasets/pcb-yolo-en-clean-v2/test.txt
 names: ["missing_hole",
 "mouse_bite",
 "open_circuit",
