--- a/data/hyps/hyp.no-augmentation.yaml
+++ b/data/hyps/hyp.no-augmentation.yaml
@@ -18,7 +18,7 @@ obj_pw: 1.0  # obj BCELoss positive_weight
 iou_t: 0.20  # IoU training threshold
 anchor_t: 4.0  # anchor-multiple threshold
 # anchors: 3  # anchors per output layer (0 to ignore)
-# this parameters are all zero since we want not to use albumentation framework
+# this parameters are all zero since we want to use albumentation framework
 fl_gamma: 0.0  # focal loss gamma (efficientDet default gamma=1.5)
 hsv_h: 0  # image HSV-Hue augmentation (fraction)
 hsv_s: 00  # image HSV-Saturation augmentation (fraction)
